# swagger/all.yaml
@@ -51,7 +51,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Class'
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: Successful operation
+                  data:
+                    $ref: '#/components/schemas/Class'    
         '400':
           $ref: '#/components/responses/400BadRequest'
     get:
@@ -1358,7 +1367,46 @@ components:
   responses:
     200Success: # Can be referenced as '#/components/responses/200'
       description: Successful operation
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              statusCode:
+                type: integer
+                example: 200
+              message:
+                type: string
+                example: Successful operation
     404NotFound: # Can be referenced as '#/components/responses/404NotFound'
       description: The specified resource was not found.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              statusCode:
+                type: integer
+                example: 404
+              error:
+                type: string
+                example: Not Found
+              message:
+                type: string
+                example: Not Found
     400BadRequest: # Can be referenced as '#/components/responses/400BadRequest'
       description: Invalid input supplied.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              statusCode:
+                type: integer
+                example: 400
+              error:
+                type: string
+                example: Bad Request
+              message:
+                type: string
+                example: '"name" is required'
